--- a/maven-web-app-deploy.yml
+++ b/maven-web-app-deploy.yml
@@ -18,7 +18,7 @@ spec:
   spec: 
     containers:
     - name: mavenwebappcontainer
-      image: ashokit/mavenwebapp
+      image: ramesh2609/mavenwebapp
       ports:
       - containerPort: 8080
 ---
