--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,11 @@
   <version>1.0-SNAPSHOT</version>
   <name>01-maven-web-app</name>
   <url>http://maven.apache.org</url>
+  <properties>
+	<sonar.host.url>http://http://65.0.29.45/:9000/</sonar.host.url>
+	<sonar.login>admin</sonar.login>
+	<sonar.password>admin</sonar.password>
+  </properties>
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
