--- a/pom.xml
+++ b/pom.xml
@@ -8,9 +8,8 @@
   <name>01-maven-web-app</name>
   <url>http://maven.apache.org</url>
   <properties>
-	<sonar.host.url>http://http://65.0.29.45/:9000/</sonar.host.url>
-	<sonar.login>admin</sonar.login>
-	<sonar.password>admin</sonar.password>
+	<sonar.host.url>http://http://65.0.29.45:9000/</sonar.host.url>
+	<sonar.login>f0a396972c3046bb6140e4a94dfeb0a2b02a8e25</sonar.login>
   </properties>
   <dependencies>
     <dependency>
